--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,7 @@
   <title>Match Filter & Export</title>
 
   <!-- FullCalendar (CSS + JS) from CDN -->
-  <link href='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js' rel="stylesheet" />
-  <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.19/index.global.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/6.1.19/index.global.min.js'></script>
 
   <link rel="stylesheet" href="style.css">
 </head>
