--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
     <section class="results">
       <h2>Filtered Matches</h2>
       <div class="actions-row">
-        <label>Duration (hours):
+        <label>Duration from match start(hours):
           <input id="defaultDuration" type="number" min="0.25" step="0.25" value="1.5">
 
         </label>
