--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,8 +14,11 @@
 
 <body>
   <main class="container">
-    <h1>Volleyball Matches — Filter & Export</h1>
-    <span>More info on <a href="https://github.com/Alpel99/ovv_scraping">GitHub</a></span>
+
+    <h1>
+      Volleyball Matches — Filter &amp; Export
+      <span class="subtitle">More info on <a href="https://github.com/Alpel99/ovv_scraping">GitHub</a></span>
+    </h1>
 
     <section class="controls">
       <div class="row">
@@ -44,8 +47,10 @@
     </section>
 
     <section class="results">
-      <h2>Filtered Matches</h2>
-      <span id="lastScraped" style="font-style: italic;"></span>
+      <h2>Filtered Matches
+        <span class="subtitle" id="lastScraped">More info on </span>
+      </h2>
+
       <div class="actions-row">
         <label>Duration from match start (hours):
           <input id="defaultDuration" type="number" min="0.25" step="0.25" value="1.5">
@@ -54,8 +59,8 @@
         <label>Time to set event earlier than match start (hours):
           <input id="earlyDuration" type="number" min="0" step="0.25" value="0">
         </label>
-        <button id="downloadIcsBtn" class="primary">Download ICS</button>
       </div>
+      <button id="downloadIcsBtn" class="primary">Download ICS</button>
 
 
 
